GNOME Bugzilla – Bug 681914
rtsp-server: segmentation fault in gst_rtsp_server_create_socket
Last modified: 2014-02-25 22:27:56 UTC
Created attachment 221258 [details] [review] segault in gst_rtsp_server_create_socket If there are no more addresses, the g_socket_address_enumerator_next function will not set *error. Added unit test: test_bind_already_in_use
commit 50e4c7e8c494d4fa1ec57d67f009f24d1ff92ef8 Author: Patricia Muscalu <patricia@axis.com> Date: Wed Aug 15 15:54:32 2012 +0200 rtsp-server: fixed segfault in gst_rtsp_server_create_socket Do not assume that *error is set in g_socket_address_enumerator_next. Added test_bind_already_in_use unit-test. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=681914